Improved text responses using embeds, inluded all the posible POST cases, improved docs, add the option to set multiple users to track via env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.1"
 services:
-  habitica-discord-bot:
-    container_name: habitica-discord-bot
+  habitica-discord-bot-nerea:
+    image: habitica-discord-bot
+    container_name: habitica-discord-bot-nerea
     build: .
-    environment:
-      - DISCORD_BOT_TOKEN=
-      - USER_NAME=
+    env_file:
+      .env
     restart: always
     ports:
       - 1111:8080
