added icons to embeds

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+## Your discord bot token you can follow this guide to obtain it https://www.writebots.com/discord-bot-token/
+
 DISCORD_BOT_TOKEN=your-discord-bot-token
 
 ## Put here the Habitica userID followed by the name the vot you want to call each user, follow the format userID:userName,anotherUserId:anotherUserName
