--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@
 
 DISCORD_BOT_TOKEN=your-discord-bot-token
 
-## Put here the Habitica userID followed by the name the vot you want to call each user, follow the format userID:userName,anotherUserId:anotherUserName
+## Put here the Habitica userID followed by the name you want the bot to call each user, follow the format userID:userName,anotherUserId:anotherUserName
 
 USERS=userID:userName,userID:userName
