--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.1"
 services:
-  habitica-discord-bot-nerea:
+  habitica-discord-bot:
     image: habitica-discord-bot
-    container_name: habitica-discord-bot-nerea
+    container_name: habitica-discord-bot
     build: .
     env_file:
       .env
